--- a/table_practice.html
+++ b/table_practice.html
@@ -7,6 +7,11 @@
 <body>
 <p>A practice table to get use started</p>
 <table>
+	<caption>Campaign Contributions</caption>
+	<tr>
+		<th colspan="2">Donor Information</th>
+		<th colspan="3">Donation Information</th>
+	<tr>	
 	<tr>
 		<th>Donor Name</th>
 		<th>Donor Zip Code</th>
@@ -16,7 +21,7 @@
 	</tr>
 	<tr>
 		<td>Jane Doe</td>
-		<td>02176</td>
+		<td><a href="https://www.google.com/maps/place/Melrose,+MA/@42.4572019,-71.054108,14z/data=!3m1!4b1!4m2!3m1!1s0x89e3724cd64b5f7d:0xdc7ba21d2807e442?hl=en02176">02176</a></td>
 		<td>$1000</td>
 		<td>General Fund</td>
 		<td>August 1st</td>
@@ -42,6 +47,13 @@
 		<td>Science Building</td>
 		<td>May 1</td>
 	</tr>
+	
+
+<caption> AppleNutrition</caption>
+
+
+
+	
 </table>
 <p>Let's add a new row to this table, listing information for a new donor, Susan Smith from Zip Code 19801 who gave $10,000 for a science building.</p>
 <p>Then let's add a new column listing the date of each donation, we can make up the dates.</p>
@@ -51,6 +63,13 @@
 
 <h2>Make our own table</h2>
 Once we complete the above additions to the existing table, let's create a new table from scratch. Use Wolfram Alpha to find the calories, Vitamin C, and Sugar content of some fruits and vegetables and list them on a table. In addition to this info, create a column for images of each fruit or vegetable, and add suitable creative commons images.
+
+<table>
+
+<caption> AppleNutrition</caption>
+<tr>
+
+</table>
 
 </body>
 </html>
